Prorata temporis on billing ,fix #1392 , Bug on checking default plan and number of users on purchase , fix #1391
Former-commit-id: 6ad86a8d1ffea26efd62d3c6ad3e1cb9dce39a7b [formerly a18a74113986f9bf45b7850223edef795c2c403e] [formerly e75b51607089e5ba3bea390805025b3b67ca53ce [formerly 2b3d9ca9f330dabc6f4585fe65275c25d4ee3ef7]]
Former-commit-id: bdd989268e1790a8dfc18c859eda99eeded4ae96 [formerly 50035dd63617fb9998352a235c9f316b3284bf35]
Former-commit-id: e4019147dbe0a1418c0359ed122ba9618b2c35f2

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -280,7 +280,7 @@
                                         30 $ 
                                   </span>    <br>  
                                   <span>Per user</span><br>                      
-                                  <input type="radio" ng-model="billing.plan" name="purchaseplan" value="month">
+                                  <input type="radio" ng-model="billing.plan" name="purchaseplan" value="month" ng-hide="billing.deactivate_month_option">
                                    
                                 </div>                            
                               </div>
