the show bug in contact is fixed fix #1381
Former-commit-id: a5999f2a6b3375604bbffc13d2d2aa3b07ea247c [formerly 3215ddec6d4b259c820722638f39cf3ada8f474d] [formerly 96a2cd9243a1aa3fb5d0ab8e225858b7c81059b2 [formerly 779f9ee7898cc703ab60eaf7bb4edc9e9669e1eb]]
Former-commit-id: 663de697e7331e18c7fe112454b01b56111eb8f2 [formerly 4ce3ca0ec27e3ae6cd1d1b122593125b8b2ef4f9]
Former-commit-id: c455fcc3d27b6994ea86ea8f2244df6e4736066e

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1794,7 +1794,7 @@
                           <input type="text"  ng-model="searchAccountQuery" typeahead="result as result.name  for result in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{ _('Company')}}">
 
                         </div>
-                    </div
+                    </div>
 
 
 
