--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -54,7 +54,7 @@
                 <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
               </ul>
         </div>
-         <span role="button" class="filterItem" ng-click="initDiscover();selectedOption ='discover'" ng-class="{activeFilter: selectedOption =='discover'}">{{ _('Discover')}}  </span>
+        <!--  <span role="button" class="filterItem" ng-click="initDiscover();selectedOption ='discover'" ng-class="{activeFilter: selectedOption =='discover'}">{{ _('Discover')}}  </span> -->
         <span role="button" class="filterItem hiddenOnPhone hiddenOnmd"  ng-class="{activeFilter: selectedOption =='tags'}" ng-click="showTagFilterCard();selectedOption ='tags'"><i class="fa fa-tags"></i><span class="hidden-xs hiddenOnxs">{{_('Filter by')}} </span> {{_('Tags')}}</span>
       </div>
       </div>
@@ -361,7 +361,7 @@
                      <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                       <div class="name">
                         <a ng-href="<%=pro.url%>" target="_blanck"class="profile-link">
-                          <%= pro.fullname %> <%= lead.lastname %>
+                          <%= pro.fullname %> <%= pro._id.$oid %>
                         </a>
                       </div>
                       <div class="pitch">
