--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -75,12 +75,12 @@
      <div class="showPage margin-bottom-15 col-md-12 task-actions" style="padding-top:10px; padding-bottom:10px;">
         <div class="col-md-12" style="/* margin-bottom:15px; */">
           <form class="form-inline newLeadForm " role="form" ng-show="showInviteForm">
-              <div class="form-group sm-group" style="">
+              <div class="form-group sm-group" style="" ng-class="{ 'has-error':email_empty}">
                   <label class="sr-only" for="exampleInputEmail2">Email</label>
-                  <input type="email" class="form-control ng-pristine ng-invalid ng-invalid-required ng-valid-email" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a email" required="">
+                  <input type="email" class="form-control ng-pristine ng-invalid ng-invalid-required ng-valid-email" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a email" >
               </div>
-              <button type="submit" class="btn red jfk-button jfk-button-action" ng-click="inviteNewUser(email)">Invite</button>
-              <button type="submit" ng-click="showInviteForm = false" class="btn btn-default">X</button>
+              <button  class="btn red jfk-button jfk-button-action" ng-click="inviteNewUser(email)">Invite</button>
+              <button  ng-click="showInviteForm = false" class="btn btn-default">X</button>
           </form>
           <div class="conta" ng-hide="showInviteForm">
               <button title="Add new user" class="btn btn-sm blue task_action" ng-click="showInviteForm=true">
