We can invite user without putting his email (the invitation is created) , fix #1377
Former-commit-id: 65473b9fc1be473a78bfb7e40b771d9d2605b066 [formerly 78c9716d20d40a77909bde00e60636dae04c5499] [formerly f2f3d9d96747e17cda2387b6b53d12e1b1bbc498 [formerly 9deba96a3862f8f6fd3d38db8f4408d25b68b969]]
Former-commit-id: f19713832bd858afe8ddd5c00dbb797dcbfd8760 [formerly d752eff323297a9d99481b3a7806fb106fdeba0d]
Former-commit-id: b17e981d8e5f2cefc832f7a6f3eb4429dbdeb68d

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -411,7 +411,7 @@
                     </div>
                   </div>
                   <div class="col-md-6 payment_form">
-                  <div style=" /* font-size: 46px; */ padding-top: 40px;"><div style="text-align: center;"><span style="font-size: 24px;text-align: center;" align="center">Total Amout to be Paid</span></div><h3 style=" margin-top: 0px; margin-bottom: 40px; text-align: center; font-size: 40px; /* margin-top: 40px; */" class=""> $ <%= billing.total%></h3></div>
+                  <div style=" /* font-size: 46px; */ padding-top: 40px;"><div style="text-align: center;"><span style="font-size: 24px;text-align: center;" align="center">Total Amount to be Paid</span></div><h3 style=" margin-top: 0px; margin-bottom: 40px; text-align: center; font-size: 40px; /* margin-top: 40px; */" class=""> $ <%= billing.total%></h3></div>
                                   
                     <h3 style=" margin-top: 0px; margin-bottom: 10px; text-align: center;" class="">Credit Card Details</h3><form  class=" col-md-10 col-md-offset-1 creditCardDetailsForm"  id="payment-form" method="POST" action="">
                       <span class="payment-errors"></span>
