Change the text for reaching limit of licenses ,fix #1371
Former-commit-id: 240a87579fa207c0283ece5ad8b6c8542818830a [formerly a6a3a2cd71960a1a29933a7e09073e4bef3f285f] [formerly df29517e1ed2cac7e20c691b914cf81de4e8f6c6 [formerly f17bc179a31119af9fd628a64c1e4d51aab962b4]]
Former-commit-id: f6c225682bed1557e690b869892d9bc755a30e43 [formerly 13c4ff21c264168f7a3e6a57cd695807297c4c13]
Former-commit-id: 8c7d4f504f57ab4c7c9021943e4d2080effaf0c4

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -585,7 +585,7 @@
               <h3 id="myModalLabel">{{_("Purchase more license")}}</h3>
             </div>
             <div class="modal-body">
-                <p>{{_("Apparently you don't have enough license to invite a new user,would you like to buy more?")}}</p>
+                <p style="font-size:13px; color:red;">{{_("You have reached the <%=organization.nb_licenses%> user license limit  for this organization.")}}<span style="font-size:13px;color:#4d90fe">{{_("Buy more licenses.")}}</span></p>
             </div>
             <div class="modal-footer">
             <button  title='{{ _("Purchase")}}' class="btn btn-sm blue task_action pull-right" ng-click="showPurchase()" >
