If users exists on other organization, display message , fix #1355
Former-commit-id: 89cd84a7567da4fc32a64094439195b493a72acf [formerly 0089f2fcfe4dc9d1afe4f64d65d1e897f8555d03] [formerly e1e482d3b00f5ffd90bc1ec790b105f3eaca9f57 [formerly 7f18c027bf3823cce73cdc52af745608f3d90078]]
Former-commit-id: 211698fa5e6188114c807137f92904e0596e0a66 [formerly 6af05823aa2b3f8e463c6d2d65c656f1f1f41368]
Former-commit-id: 09a564d4738d1c9b8784031adf53e653a580f932

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -602,6 +602,33 @@
         <!-- /.modal-dialog -->
       </div>
 
+<!--  error in insert user -->
+  <div class="modal fade"  id="errorModalInsert"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+              <h3 id="myModalLabel">{{_("Error")}}</h3>
+            </div>
+            <div class="modal-body">
+                <p>{{_("<%=errorMsg%>")}}</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn default" data-dismiss="modal" ng-click="endError()">{{_("Close")}}</button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
+<!-- end of modal-->
+
+
+
+
+
+
+
 
 <!-- end more license moadal-->
 <script type="text/javascript">
