--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -151,7 +151,7 @@
               <div class="tabbable tabbable-custom">
                 <ul class="nav nav-tabs">
                   <li class="ng-tab" ng-class="{active: selectedTab == 2}">
-                    <a ng-click="selectedTab = 2;renderMaps();">{{_('About')}}</a>
+                    <a ng-click="selectedTab = 2;initTabs('about');renderMaps();">{{_('About')}}</a>
                   </li>
                   <li class="ng-tab" ng-class="{active: selectedTab == 1}">
                     <a ng-click="selectedTab = 1;">{{ _('Notes')}}</a>
@@ -172,7 +172,7 @@
                     <a ng-click="waterfallTrigger();selectedTab = 5;">{{ _('Opportunities')}}</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 6}">
-                    <a ng-click="waterfallTrigger();selectedTab = 6;">{{ _('Cases')}}</a>
+                    <a ng-click="waterfallTrigger();initTabs('case');selectedTab = 6;">{{ _('Cases')}}</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9, forceHide: noDetails()}">
                     <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Contact')}}</a>
@@ -1094,53 +1094,82 @@
                             <div class="row">
                             <div class="col-md-12 waterfall4 waterfallDiv" ng-hide="showNewCase">
                              <!-- ngRepeat: casee in cases -->
-                             <div  class="cardElement caseRelatedCard" ng-repeat="casee in cases" >
-                              <div class="content" style="background-color:  <%=priorityColor(casee.priority)%>;color:<%=idealTextColor(priorityColor(casee.priority))%>;">
-                                    <div class="btn-group inCardOptionsBtn">
-                                      <button class="btn btn-default btn-xs dropdown-toggle" style="background-color:  <%=priorityColor(casee.priority)%>;color:<%=idealTextColor(priorityColor(casee.priority))%>;" type="button" data-toggle="dropdown">
-                                       <i class="fa fa-ellipsis-vertical" style="color:<%=idealTextColor(priorityColor(casee.priority))%>;"></i>
-                                      </button>
-                                      <ul class="dropdown-menu drp-dwn-right " role="menu">
-                                        <li>
-                                         <a href="" ng-click="showAssigneeTags(casee)">
-                                             <i class='fa fa-tags'></i> {{_('Add tags')}} </a>
-                                        </li>
-                                        <li>
-                                         <a href="" ng-click="editbeforedelete(casee,'case')">
-                                             <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
-                                        </li>
-                                      </ul>
-                                    </div>
-                                     <div class="detailsSection">
-                                      <div class="head">
-                                        <div class="text">
-                                          <div class="name">
-                                              <a href="/#/cases/show/<%= casee.id %>"  class="profile-link" style="color:<%=idealTextColor(priorityColor(casee.priority))%>;">
-                                                 <%=casee.name%>
-                                              </a>
-                                          </div>
-                                          <div class="pitch">
-                                            <span>
-                                                <%=fromNow(casee.updated_at)%>
-                                            </span>
-                                            <span ng-show="casee.status" class="contact-title" >
-                                              Status:
-                                              <a class="desc status" href="/#/search/type:Case <%=casee.status%>">
-                                                <%=casee.status%>
-                                              </a>
-                                            </span>
-                                            <span ng-show="casee.priority">
-                                              <a  class="desc priority pull-right" href="/#/search/type:Case <%=casee.priority%>" style="color:<%=idealTextColor(priorityColor(casee.priority))%>;">
-                                                <%=casee.priority%>
-                                              </a>
-                                            </span>
-                                          </div>
-                                        </div>
-                                        <div class="clearfix"></div>
-                                      </div>
-                                    </div>
-                              </div>
-                              </div>
+       <div ng-repeat="casee in cases" droppable id="card_<%=$index%>" class="cardElement caseCard" ng-drop="dropTag(casee,$index)" >
+        <div class="caseContainer" style="border-right: 2px solid <%=priorityColor(casee.priority)%>;">
+            <div class="btn-group inCardOptionsBtn">
+              <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+               <i class="fa fa-ellipsis-vertical"></i>
+              </button>
+              <ul class="dropdown-menu drp-dwn-right " role="menu">
+                <li>
+                 <a href="" ng-click="showAssigneeTagToCase($index)">
+                     <i class='fa fa-tags'></i> {{_('Add tags')}} </a>
+                </li>
+                <li>
+                 <a href="" ng-click="editbeforedeleteCase(casee)">
+                     <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
+                </li>
+              </ul>
+            </div>
+          <div class="detailsSection row">
+          <div class="caseContent">
+             <!--  <div class="col-md-3 col-xs-3 col-pic">
+                <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="casee.name"><img ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" src="/static/img/default_company.png" >
+                <img ng-show="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" ng-src="https://docs.google.com/uc?id=<%= casee.logo_img_id %>" data-hasqtip="2">
+                </a>
+              </div> -->
+              <div class="col-md-12 col-xs-12">             
+                <div class="row">
+                <!--   <div class="col-md-2 col-xs-2">
+                    <div class="pic">
+                      <a href="/#/contacts/show/6509108836433920" class="startup-link" title="Ilyes BOUDJELTHIA">
+                        <img ng-hide="contact.profile_img_url" class="img-responsive profile-photo" height="40" width="40" src="/static/img/avatar_contact.jpg">
+                        <img ng-show="contact.profile_img_url" class="img-responsive profile-photo" ng-src="https://docs.google.com/uc?id=" data-hasqtip="2" src="https://docs.google.com/uc?id=" style="display: none;">
+                      </a>
+                    </div>
+                  </div> -->
+                  <div class="col-md-10 col-xs-10">
+                   <div class="name">
+                    <a href="/#/cases/show/<%= casee.id %>" class="profile-link" data-id="126085" data-type="Startup"><%= casee.name %>
+                    </a>
+                  </div>
+                  <div class="pitch">
+                      <p class="status  ng-binding">
+
+                      <span  class="contact-title" style="font-size: 12px;
+                        ">
+                            <span class="">{{ _('Date:')}}</span> <span class=""> <%=casee.updated_at | date:'MMMM dd, yyyy- HH:mm:ss'%> </span>
+                            </span>
+
+                      
+                      <span  class="contact-title" style="font-size: 12px;">
+                            <span class="">{{_('Last updated:') }} <%=fromNow(casee.updated_at)%></span>
+                      </span>
+
+                      <span class="pull-right" style="color:<%=getStatusColor(casee.current_status.name)%>"><%= casee.current_status.name %></span>
+                        </p>
+                  </div>
+                <div class="tagsSection " ng-class="{hidden: casee.tags==null}">
+                  <div class="">
+                    <div class="sectionContent">
+                      <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)"  class=" task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                      </a>
+                    </div>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+
+
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            </div>
+             <span class="badge badge-roundless badge-danger pull-right priority ng-binding" style="background-color:  <%=priorityColor(casee.priority)%>;color:<%=idealTextColor(priorityColor(casee.priority))%>;" ><%= casee.priority %></span>
+            <div class="clearfix"></div>
+        </div>
+        </div>
                               </div>
                                     <div ng-show="blankStatecase&&!showNewCase"  class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                                         <div class="dashboard-stat cards">
@@ -1161,19 +1190,12 @@
                             </div>
                              <div class="row">
                              <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
-
-
-                                        <button ng-click="CasePrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="casepagination.prev" style="display: none;">
-                                        {{ _('Prev')}}
-                                        </button>
-
-                                        <button ng-click="CaselistNextPageItems()" class="btn" ng-show="casepagination.next" style="display: none;">
-                                        {{ _('Next')}}
-                                        </button>
-
-                                    </div>
-                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
+                                  <div class="cardElement loaderCard" ng-show="isLoading" data-span="all">
+          <div class="loaderCardContent">
+             <img class="img-responsive " src="/static/img/gloader.gif">
+             <span>  Loading...</span>
+          </div>
+        </div>
                               </div>
                               </div>
 
@@ -1828,6 +1850,31 @@
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
                 <input  ng-click="deleteItem()" type="submit" class="btn red" value="Delete">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+              </div>
+
+               </div>
+               </div>
+       </div>          
+       <!--LA 24.12.2013 Modal before Deleting case from contact-->
+  <div id="BeforedeleteCase" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">{{ _('Delete case from this contact')}}</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="seletesho" name="deletesho" class="form-horizontal">
+
+
+                  <p>{{_("Are you sure you want to delete")}} :  <%= selectedItem.typee=='contact' && selectedItem.item.firstname  || selectedItem.item.name %></p>
+                 </form>
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+
+                <input  ng-click="deleteCase()" type="submit" class="btn red" value="Delete">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
 
@@ -2727,6 +2774,7 @@
 
 
                     </fieldset>
+                </form>
 
               </div>
               <div class="modal-footer">
@@ -2735,10 +2783,38 @@
                 <input  ng-click="deleteopportunity()" type="submit" class="btn red" value="Delete">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
-               </form>
+               
           </div>
         </div>
        </div>
+   <div id="assigneeTagsToCase" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 id="myModalLabel" class="modal-title">Add Tags </h3>
+            </div>
+            <div class="modal-body">
+               <form id="seletesho" name="deletesho" class="form-horizontal">
+               <div class="form-group">
+                    <select id="select2_sample3" class="form-control select2" multiple>
+                      <option ng-repeat="tag in tabtags"
+                      value='<%=tag.entityKey%>'>
+                        <%=tag.name%>
+                      </option>
+                    </select>
+                </div>
+              </form>
+            </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <input ng-hide="isLoadingTask" ng-click="addTagsToCase()" type="submit" class="btn green" value="Add">
+                <input ng-show="isLoadingTask" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+        
+        </div>
+      </div>
+  </div>
      
 <script type="text/javascript">
   $(function() {
@@ -2796,6 +2872,10 @@
               autoresize: true
           });
   $("#select2_sample2").select2({
+                          placeholder: "{{ _('Click to Select a label')}}",
+                          allowClear: false
+                      }); 
+  $("#select2_sample3").select2({
                           placeholder: "{{ _('Click to Select a label')}}",
                           allowClear: false
                       });
