Change the slogan of welcome page
Former-commit-id: 03d9cb92b4e1ff7b9803ab6a7232e1c4b133f66d [formerly f90681a3ed803dd6fd6998700b07328dc3de7e02] [formerly 016c196d57027e2ea2b433b40d1d1c3d3d141262 [formerly 8defa876d68bc1b7156e85c7bc7e8ad73fa54b17]]
Former-commit-id: b907e4076616e7b96e3344dc46d8622ed45c4ecb [formerly 5ee0370888770f759bf62ee4a47360cbb9279b9d]
Former-commit-id: 2134d7a008d67b0220f22cb7cb6f129d0a0f0c10

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." name="description">
-    <meta content="ioGrow - Discover new customer, get organized and grow your business" property="og:title">
+    <meta content="ioGrow - Get new customers, Be organized and Grow your Business" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
     <meta content="Collect Leads from Twitter, LinkedIn and Gmail" property="og:description">
     <title>
-      ioGrow - Discover new customers, Get organized and Grow your Business
+      ioGrow - Get new customers, Be organized and Grow your Business
     </title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
     <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         <div class="one-whole">
           <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading">
-            Discover new customers, Get organized and Grow your Business
+            Get new Customers, be Organized and Grow your Business
           </h1><a class="maia-button button-download mobile-is-hidden get-started try-iogrow" href="/sign-in">Try ioGrow</a>
           <div class="mobile-is-visible mobile-button-selector">
             <a class="maia-button button-download download-mobile get-started try-iogrow" href="/sign-in" style="display: inline-block;">
