case in the related contact list is colored completely is fixed fix #1375 The Contat's related tab (Opportunity) must work  fix #1399 when deleting doc in contacts must show a message confirmation fix #1371
Former-commit-id: 21c5f76d0049a7046bff9eafb250a80ec4a8f3f2 [formerly 090d56e52cb76a3b5b0bcb539df9a8f829412c8f] [formerly fd83b9fda5ba56e3828b08ab780c41fb314af00d [formerly 28734142db0057c2e2cfe47d71aa004bcea75d8b]]
Former-commit-id: af6341b14999753d2b8dc0d94e63f5b76f1c2bb7 [formerly 9f50ff904839e874511bad13ee2f545453273220]
Former-commit-id: b7ed2cb78be3289ab6b451729305b7bcfd2a82ab

--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -53,7 +53,7 @@
                                 </a>
                                 |
                                 <i class="icon-trash">
-                                    <a ng-click="deleteAttachement()" class="btn-link addAnotherPhone">  {{ _('Delete')}}
+                                    <a ng-click="editbeforedelete()" class="btn-link addAnotherPhone">  {{ _('Delete')}}
                                     </a>
                                 </i>
                             </span>
@@ -180,7 +180,27 @@
             <!-- $ Events -->
         </div>
     </div>
+<div id="BeforedeleteAttachement" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">Delete Attachement</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="seletesho" name="deletesho" class="form-horizontal">
+                  <p>{{_("Are you sure you want to delete")}} :  <%=attachment.title%> .</p>
+              </div>
+                <div class="modal-footer">
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
+                  <input  ng-click="deleteAttachement()" type="submit" class="btn red" value="Delete this Account">
+                  <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+                </div>
+            </form>
+          </div>
+        </div>
+       </div>
     <!--HKA 11.10.2013 Edit Contact -->
     <div id="EditContactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
