-the list task bug is located in task.py line 345 in the server is fixed fix #1369 -problem in contact when adding event and tasks is fixed fix #1396
Former-commit-id: cba7332171f179bc37d176503b87529cf35fb3ce [formerly d9d58c4aece32f7ef93c2ea28e315aacca1e380f] [formerly 4d7584504b536ebf2bd71d06ed633ed073804d3c [formerly be1c0379bc6b678096f1b53e8ff114a3b848ac12]]
Former-commit-id: 83484d8fb54d96733695f8339517d48e209b165c [formerly 84ad2092ef5a779379c8983ed2db70adf173dbd7]
Former-commit-id: c868818da694c1e1f98d3d75c261237970f2cb6c

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1534,8 +1534,8 @@
 
                 </div>
                 <div class="newContactform portlet-body" id="chats">
-                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
-                      <li ng-repeat="task in tasks" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
+                   <ul id="tasks" class="list-unstyled lead_related_events">
+                      <li ng-repeat="task in tasks" id="task_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
                         <div class="event-container">
                           <div class="showDescription">
                             <span class="relatedEventTitle">
@@ -1611,7 +1611,9 @@
                       </div>
                       <div class="row">
                           <div class="col-md-12 margin-top-10">
-                              <p><span ng-hide="newTaskform">{{ _('Add New Task')}}</span><button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">{{ _('Add')}}</button><button type="button" ng-click="closeTaskForm(newTask)" ng-show="newTaskform" class="cancelEventBtn btn btn-default btn-sm pull-right btn-inline">{{ _('Cancel')}}</button></p>
+                              <p><span ng-hide="newTaskform">{{ _('Add New Task')}}</span>
+                              <button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">{{ _('Add')}}</button>
+                              <button type="button" ng-click="closeTaskForm(newTask)" ng-show="newTaskform" class="cancelEventBtn btn btn-default btn-sm pull-right btn-inline">{{ _('Cancel')}}</button></p>
 
                           </div>
                       </div>
@@ -1629,7 +1631,7 @@
 
                 </div>
                 <div class="newContactform portlet-body" id="chats">
-                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
+                   <ul id="events" class="list-unstyled lead_related_events">
                       <li ng-repeat="event in events" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
                         <div class="event-container">
                           <div class="showDescription">
